# fundamental_algorithms

./: CMakeLists.txt  FundamentalAlgorithms.sln  README.md
10-11-22/: 10-11-22.sln  10-11-22.vcxproj
10-11-22/task-1/: task-1.vcxproj
10-11-22/task-2/: README.md  main2.c  task-2.vcxproj
10-11-22/task-3/: 1.txt  2.txt  funcs3.c  header3.h  main3.c  task-3.vcxproj  task-3.vcxproj.filters
10-11-22/task-4/: 1.txt  2.txt  funcs4.c  header4.h  main4.c  task-4.vcxproj  task-4.vcxproj.filters
10-11-22/task-5/: 1.txt  1_1.txt  1_4.txt  2.txt  README.md  funcs5.c  header5.h  main5.c  task-5.vcxproj  task-5.vcxproj.filters
10-11-22/task-6/: 1.txt  2.txt  main6.c  post.c  post6.c  post6.h  string6.c  string6.h  task-6.vcxproj  task-6.vcxproj.filters
10-11-22/task-7/: 1.txt  2.txt  funcs7.c  header7.h  main7.c  task-7.vcxproj  task-7.vcxproj.filters
10-11-22/task-8/: task-8.vcxproj  task-8.vcxproj.filters
20-10-22/: README.md
20-10-22/task-1/: README.md
20-10-22/task-10/: main10.c
20-10-22/task-2/: README.md  main2.c
20-10-22/task-3/: funcs3.c  header3.h  main3.c
20-10-22/task-4/: README.md
20-10-22/task-5/: README.md  funcs5.c  header5.h  main5.c
20-10-22/task-6/: funcs6.c  header6.h  main6.c
20-10-22/task-7/: main7.c
20-10-22/task-8/: task8.c
20-10-22/task-9/: main9.c
29-09-22/task-1/: funcs.c  main.c
29-09-22/task-10/: funcs10.c  header10.h  main10.c
29-09-22/task-2/: README.md  funcs.c  main.c
29-09-22/task-3/: funcs.c  header.h  main.c
another_course_work/: CMakeLists.txt  db_user_communication.cpp  db_user_communication.h  main.cpp
course_work/: CMakeLists.txt  db_user_communication.cpp  db_user_communication.h  main.cpp
course_work/allocator/: memory_base_class.cpp  memory_base_class.h  memory_holder.cpp  memory_holder.h
course_work/allocator_from_global_heap/: memory_from_global_heap.cpp  memory_from_global_heap_showcase.cpp
course_work/allocator_with_boundary_tags_deallocation/: memory_with_boundary_tags.cpp  memory_with_boundary_tags.h  memory_with_boundary_tags_showcase.cpp
course_work/allocator_with_buddy_system/: memory_with_buddy_system.cpp  memory_with_buddy_system.h  memory_with_buddy_system_showcase.cpp
course_work/allocator_with_sorted_list_deallocation/: memory_with_sorted_list_deallocation.cpp  memory_with_sorted_list_deallocation_showcase.cpp
course_work/avl_tree/: avl_tree.h
course_work/binary_tree/: associative_container.h  bs_tree.h
course_work/chain_of_resp_and_command/: command.h  handler.h
course_work/db/: data_base.cpp  data_base.h
course_work/db_key/: key.h
course_work/db_value/: db_value.cpp  db_value.h  db_value_builder.cpp  db_value_builder.h  string_holder.h
course_work/logger/: logger.h  logger_builder.cpp
course_work/rb_tree/: rb_tree.h
course_work/splay_tree/: splay_tree.h
course_work/test/: data_base_test1  data_base_test2  data_base_test3
lab3/: README.md
lab5/: CMakeLists.txt  README.md  main.cpp
lab5/allocator/: memory_base_class.h  memory_holder.cpp  memory_holder.h
lab5/allocator_from_global_heap/: memory_from_global_heap.cpp  memory_from_global_heap.h
lab5/allocator_with_buddy_system/: memory_with_buddy_system.cpp
lab5/avl_tree/: avl_tree.cpp  avl_tree.h
lab5/b_plus_tree/: b_plus_tree.h
lab5/b_tree/: b_tree.h
lab5/b_tree_incorrect/: b_tree.h
lab5/base_classes/: Logger.cpp  Logger.h  Logger_builder.cpp  Logger_builder.h  Memory_base_class.cpp  Memory_base_class.h  binary_search_tree.cpp  binary_search_tree.h  logger.h  logger_holder.h  memory_base_class.cpp  memory_base_class.h
lab5/bigint/: bigint.h  bigint_division.cpp  bigint_division.h  bigint_impl.cpp  bigint_impl.h  bigint_multiplication.cpp  bigint_multiplication.h
lab5/binary_tree/: associative_container.cpp  associative_container.h  binary_search_tree.cpp  binary_search_tree.h  bs_tree.h  bst_tree.h
lab5/lab5task1/: 1.json  CMakeLists.txt  README.md  config.json  logger.cpp  logger_showcase.cpp
lab5/lab5task2/: memory_from_global_heap.cpp  memory_from_global_heap.h  memory_from_global_heap_showcase.cpp
lab5/lab5task3/: memory_with_sorted_list_deallocation.cpp  memory_with_sorted_list_deallocation.h  memory_with_sorted_list_deallocation_showcase.cpp
lab5/lab5task4/: memory_with_boundary_tags.cpp  memory_with_boundary_tags.h  memory_with_boundary_tags_showcase.cpp
lab5/lab5task5/: memory_with_buddy_system.cpp  memory_with_buddy_system.h  memory_with_buddy_system_showcase.cpp
lab5/logger/: logger_builder.cpp  logger_builder.h  logger_holder.cpp  logger_holder.h
lab5/logger_showcase/: 1.json  bolvanka.cpp  logger_showcase.cpp
lab5/rb_tree/: rb_tree.cpp  rb_tree.h
lab5/splay_tree/: splay_tree.cpp  splay_tree.h
task-1/: task-1.vcxproj
(+265 files in other folders)
